add option in library

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -92,6 +92,91 @@
     "notes":"ملاحظات",
     "Add New address":"إضافة العنوان",
     "Edit Address":"تعديل العنوان",
+    "Edit":"تعديل",
+    "The required quantity is not available in stock .. The quantity available for order now is:":"الكمية المطلوبة غير متوفرة في المخزون .. الكمية المتوفرة للطلب الأن هي  : ",
+    "My Orders":"طلباتي",
+    "No orders in your account ..! Go to the library enjoy many great products":"لا توجد طلبات سابقة في حسابك ..! اذهب الى المكتبة الأن وتمتع بتسوق العديد من المنتجات الرائعة",
+    "Order No":"رقم الطلب",
+    "Total":"الإجمالي",
+    "Order Date":"تاريخ الطلب",
+    "Order status":"حالة الطلب",
+    "Show Products":"عرض الطلب",
+    "Order No : ":"طلب رقم : ",
+    "Order Address":"عنوان توصيل الطلب",
+    "Awaiting review from management":"في انتظار المراجعة من الإدارة",
+    "Your order is under review":"طلبك قيد المراجعة",
+    "Your order has been shipped":"تم شحن طلبك بنجاح",
+    "You have successfully received your request":"لقد قمت باستلام طلبك بنجاح",
+    "Downloadable products":"منتجات قابلة للتحميل",
+    "Download":"تحميل",
+    "No Downloadable products ..! Go to the library enjoy many great products":"لا توجد منتجات قابلة للتحميل في حسابك ..! اذهب للمكتبة وتسوق العديد من المنتجات الرائعة",
+    "Orders and downloads":"الطلبات والتحميلات",
+    "ALMS Admin":"لوحة التحكم الرئيسية",
+    "Dashboard":"لوحة التحكم",
+    "All Users":"جميع المستخدمين",
+    "Users":"المستخدمين",
+    "Trashed Users":"المستخدمين المحذوفين",
+    "Roles":"الصلاحيات",
+    "Roles for users":"صلاحيات المستخدمين",
+    "Trashed Roles":"الصلاحيات المحذوفة",
+    "Settings":"الاعدادات",
+    "Social Links":"روابط السوشيال ميديا",
+    "Countries":"الدول",
+    "Trashed Countries":"الدول المحذوفة",
+    "Learning Systems":"الانظمة التعليمية",
+    "Trashed Systems":"الانظمة التعليمية المحذوفة",
+    "stages":"المراحل التعليمية",
+    "Trashed Stages":"المراحل التعليمية المحذوفة",
+    "Classes":"الصفوف الدراسية",
+    "Trashed Classes":"الصفوف المحذوفة",
+    "Courses":"المواد او الكورسات",
+    "Trashed Courses":"المواد المحذوفة",
+    "chapters":"فصول المواد",
+    "Trashed chapters":"الفصول المحذوفة",
+    "lessons":"الدروس",
+    "Trashed lessons":"الدروس المحذوفة",
+    "Live Stream":"البث المباشر",
+    "Library":"المكتبة",
+    "Categories":"الأقسام",
+    "Trashed Categories":"الأقسام المحذوفة",
+    "Products":"المنتجات",
+    "Trashed Products":"المنتجات المحذوفة",
+    "Orders":"الطلبات",
+    "Trashed Orders":"الطلبات المحذوفة",
+    "Home Page Sections":"الصفحة الرئيسية",
+    "news":"الأخبار",
+    "Trashed news":"الأخبار المحذوفة",
+    "ads":"الإعلانات",
+    "Trashed ads":"الإعلانات المحذوفة",
+    "sponsers":"الداعمين",
+    "Trashed sponsers":"الداعمين المحذوفين",
+    "links":"روابط سريعة",
+    "Trashed links":"الروابط المحذوفة",
+    "Libirary Categories":"أقسام المكتبة",
+    "Products":"المنتجات",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
+    "Home":"الرئيسية",
     "Home":"الرئيسية",
     "Home":"الرئيسية",
     "Home":"الرئيسية",
