replace ALMS with iTeaching

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -8,7 +8,7 @@
     "Courses":"الكورسات والدورات",
     "Login":"تسجيل الدخول",
     "Register Now":"سجل الأن",
-    "ALMS is a beautifully crafted user interface for modern Education Platforms, including Courses & Tutorials, Video Lessons, Student and Teacher Dashboard, Curriculum Management, Earnings and Reporting, ERP, HR, CMS, Tasks, Projects, eCommerce and more.":"المنصة التعليمية مصممة بشكل جميل وسهل ، بما في ذلك الدورات والبرامج التعليمية ، ودروس الفيديو ، ولوحة معلومات الطالب والمعلم ،  ونظام إدارة المحتوى ، والمهام ، والمشاريع ، والتجارة الإلكترونية والمزيد.",
+    "iTeaching is a beautifully crafted user interface for modern Education Platforms, including Courses & Tutorials, Video Lessons, Student and Teacher Dashboard, Curriculum Management, Earnings and Reporting, ERP, HR, CMS, Tasks, Projects, eCommerce and more.":"المنصة التعليمية مصممة بشكل جميل وسهل ، بما في ذلك الدورات والبرامج التعليمية ، ودروس الفيديو ، ولوحة معلومات الطالب والمعلم ،  ونظام إدارة المحتوى ، والمهام ، والمشاريع ، والتجارة الإلكترونية والمزيد.",
     "All rights reserved.":"جميع الحقوق محفوظة",
     "The easiest way to learn for all educational levels, as well as specialized courses and courses in all fields":"الطريق الأسهل للتعلم لجميع المراحل التعليمية وأيضا كورسات ودورات متخصصة في جميع المجالات",
     "Start Learning Now":"ابدأ التعلم الأن",
@@ -111,7 +111,7 @@
     "Download":"تحميل",
     "No Downloadable products ..! Go to the library enjoy many great products":"لا توجد منتجات قابلة للتحميل في حسابك ..! اذهب للمكتبة وتسوق العديد من المنتجات الرائعة",
     "Orders and downloads":"الطلبات والتحميلات",
-    "ALMS Admin":"لوحة التحكم الرئيسية",
+    "iTeaching Admin":"لوحة التحكم الرئيسية",
     "Dashboard":"لوحة التحكم",
     "All Users":"جميع المستخدمين",
     "Users":"المستخدمين",
