chang library name

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -542,8 +542,8 @@
     "Shipping Fee : ":"رسوم التوصيل على الفاتورة : ",
     "Shipping fee":"رسوم التوصيل",
     "Show Details for order":"عرض تفاصيل الطلب",
-    "Home":"الرئيسية",
-    "Home":"الرئيسية",
+    "Arabic Shop Name":"إسم صفحة السوق بالعربي",
+    "English Shop Name":"إسم صفحة السوق بالإنجليزي",
     "Home":"الرئيسية",
     "Home":"الرئيسية",
     "Home":"الرئيسية",
